--- a/streamamg-sdk-authentication/build.gradle
+++ b/streamamg-sdk-authentication/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 //    referencing the specific named core version
 
 //    implementation project(':streamamg-sdk-core')
-    implementation "com.streamamg:streamamg-sdk-core:$SDK_VERSION_NAME"
+   // implementation "com.streamamg:streamamg-sdk-core:$SDK_VERSION_NAME"
+    implementation project(path: ':streamamg-sdk-core')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx_version"
