--- a/streamamg-sdk-streamplay/build.gradle
+++ b/streamamg-sdk-streamplay/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation project(path: ':streamamg-sdk-core')
 
     testImplementation "junit:junit:$junit_version"
 }
