--- a/streamamg-sdk-playkit/build.gradle
+++ b/streamamg-sdk-playkit/build.gradle
@@ -36,6 +36,9 @@ android {
         }
     }
 }
+repositories {
+    maven { url  "https://npaw.jfrog.io/artifactory/youbora/" }
+}
 
 dependencies {
 
@@ -43,9 +46,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.kaltura.player:tvplayer:4.15.0'
+    implementation 'com.kaltura.player:tvplayer:4.16.0'
     implementation 'com.kaltura.playkit:imaplugin:4.15.0'
+    implementation 'com.kaltura.playkit:youboraplugin:4.16.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
