--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ plugins {
     id 'maven-publish'
 }
 // Versions of the library modules are matched (eg 1.0 core goes with 1.0 cloudmatrix) to prevent dependency issues
-ext.SDK_VERSION_CODE = 2
-ext.SDK_VERSION_NAME = "0.2.1"
+ext.SDK_VERSION_CODE = 3
+ext.SDK_VERSION_NAME = "0.3"
 
 publishing {
     publications {
@@ -74,6 +74,10 @@ publishing {
                 dependencyNode4.appendNode('groupId', 'com.google.android.material')
                 dependencyNode4.appendNode('artifactId', 'material')
                 dependencyNode4.appendNode('version', '1.3.0')
+                def dependencyNode5 = dependenciesNode.appendNode('dependency')
+                dependencyNode5.appendNode('groupId', 'com.kaltura.playkit')
+                dependencyNode5.appendNode('artifactId', 'youboraplugin')
+                dependencyNode5.appendNode('version', '4.16.0')
             }
         }
     }
@@ -108,5 +112,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url  "https://npaw.jfrog.io/artifactory/youbora/" }
     }
 }
