--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext.kotlin_version = "1.5.31"
     repositories {
         google()
         mavenCentral()
@@ -7,7 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.github.dcendents:android-maven-plugin:1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
     }
 }
 
@@ -15,8 +15,8 @@ plugins {
     id 'maven-publish'
 }
 // Versions of the library modules are matched (eg 1.0 core goes with 1.0 cloudmatrix) to prevent dependency issues
-ext.SDK_VERSION_CODE = 3
-ext.SDK_VERSION_NAME = "0.3.1"
+ext.SDK_VERSION_CODE = 4
+ext.SDK_VERSION_NAME = "0.4"
 
 publishing {
     publications {
@@ -48,7 +48,7 @@ publishing {
                 def dependencyNode = dependenciesNode.appendNode('dependency')
                 dependencyNode.appendNode('groupId', 'androidx.security')
                 dependencyNode.appendNode('artifactId', 'security-crypto')
-                dependencyNode.appendNode('version', '1.1.0-alpha03')
+                dependencyNode.appendNode('version', '1.1.0-alpha01')
             }
         }
         playkit(MavenPublication) {
@@ -92,18 +92,45 @@ publishing {
                 dependencyNode8.appendNode('version', '2.8.6')
             }
         }
+
+        playkit2go(MavenPublication) {
+            groupId = 'com.github.streamAMG'
+            artifactId = 'streamamg-sdk-playkit2go'
+            version = SDK_VERSION_NAME
+            artifact("$rootDir/streamamg-sdk-playkit2go/build/outputs/aar/streamamg-sdk-playkit2go-release-${SDK_VERSION_NAME}.aar")
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                def dependencyNode = dependenciesNode.appendNode('dependency')
+                dependencyNode.appendNode('groupId', 'com.kaltura.dtg')
+                dependencyNode.appendNode('artifactId', 'dtglib')
+                dependencyNode.appendNode('version', '2.6.11')
+            }
+        }
+
+        purchases(MavenPublication) {
+            groupId = 'com.github.streamAMG'
+            artifactId = 'streamamg-sdk-purchases'
+            version = SDK_VERSION_NAME
+            artifact("$rootDir/streamamg-sdk-purchases/build/outputs/aar/streamamg-sdk-purchases-release-${SDK_VERSION_NAME}.aar")
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                def dependencyNode = dependenciesNode.appendNode('dependency')
+                dependencyNode.appendNode('groupId', 'com.android.billingclient')
+                dependencyNode.appendNode('artifactId', 'billing-ktx')
+                dependencyNode.appendNode('version', '4.0.0')
+            }
+        }
     }
 }
-
 repositories {
     mavenCentral()
 }
 
 ext {
-    androidx_crypto_version = '1.1.0-alpha03'
-    appcompat_version = '1.3.0'
+    androidx_crypto_version = '1.1.0-alpha01'
+    appcompat_version = '1.3.1'
     constraintlayout_version = '2.0.4'
-    core_ktx_version = '1.5.0'
+    core_ktx_version = '1.6.0'
     gson_version = '2.8.6'
     lifecycle_extensions_version = '2.2.0'
     okhttp_version = '4.9.0'
