--- a/streamamg-sdk-playkit2go/build.gradle
+++ b/streamamg-sdk-playkit2go/build.gradle
@@ -11,6 +11,9 @@ android {
         targetSdkVersion 30
         versionCode SDK_VERSION_CODE
         versionName SDK_VERSION_NAME
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,17 +35,19 @@ android {
         }
     }
 }
+repositories {
+    maven { url  "https://npaw.jfrog.io/artifactory/youbora/" }
+}
 
 dependencies {
-    implementation project(path: ':streamamg-sdk-core')
-
+    implementation project(path: ':streamamg-sdk-playkit')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    api 'com.kaltura.dtg:dtglib:2.6.12'
 
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.google.code.gson:gson:$gson_version"
-
-    testImplementation "junit:junit:$junit_version"
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
