--- a/streamamg-sdk-purchases/build.gradle
+++ b/streamamg-sdk-purchases/build.gradle
@@ -11,6 +11,8 @@ android {
         targetSdkVersion 30
         versionCode SDK_VERSION_CODE
         versionName SDK_VERSION_NAME
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     buildTypes {
@@ -34,15 +36,18 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':streamamg-sdk-core')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
-
-    testImplementation "junit:junit:$junit_version"
+    implementation 'com.android.billingclient:billing-ktx:4.0.0'
+    implementation project(path: ':streamamg-sdk-authentication')
+    implementation project(path: ':streamamg-sdk-core')
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
