--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ plugins {
     id 'maven-publish'
 }
 // Versions of the library modules are matched (eg 1.0 core goes with 1.0 cloudmatrix) to prevent dependency issues
-ext.SDK_VERSION_CODE = 4
-ext.SDK_VERSION_NAME = "0.4"
+ext.SDK_VERSION_CODE = 5
+ext.SDK_VERSION_NAME = "0.4.1"
 
 publishing {
     publications {
@@ -25,6 +25,13 @@ publishing {
             artifactId = 'streamamg-sdk-core'
             version = SDK_VERSION_NAME
             artifact("$rootDir/streamamg-sdk-core/build/outputs/aar/streamamg-sdk-core-release-${SDK_VERSION_NAME}.aar")
+//            pom.withXml {
+//                def dependenciesNode = asNode().appendNode('dependencies')
+//                def dependencyNode = dependenciesNode.appendNode('dependency')
+//                dependencyNode.appendNode('groupId', 'androidx.security')
+//                dependencyNode.appendNode('artifactId', 'security-crypto')
+//                dependencyNode.appendNode('version', ${androidx_crypto_version})
+//            }
         }
         cloudmatrix(MavenPublication) {
             groupId = 'com.github.streamAMG'
@@ -43,13 +50,7 @@ publishing {
             artifactId = 'streamamg-sdk-authentication'
             version = SDK_VERSION_NAME
             artifact("$rootDir/streamamg-sdk-authentication/build/outputs/aar/streamamg-sdk-authentication-release-${SDK_VERSION_NAME}.aar")
-            pom.withXml {
-                def dependenciesNode = asNode().appendNode('dependencies')
-                def dependencyNode = dependenciesNode.appendNode('dependency')
-                dependencyNode.appendNode('groupId', 'androidx.security')
-                dependencyNode.appendNode('artifactId', 'security-crypto')
-                dependencyNode.appendNode('version', '1.1.0-alpha01')
-            }
+
         }
         playkit(MavenPublication) {
             groupId = 'com.github.streamAMG'
@@ -127,8 +128,8 @@ repositories {
 }
 
 ext {
-    androidx_crypto_version = '1.1.0-alpha01'
-    appcompat_version = '1.3.1'
+  //  androidx_crypto_version = '1.1.0-alpha01'
+    appcompat_version = '1.3.0'
     constraintlayout_version = '2.0.4'
     core_ktx_version = '1.6.0'
     gson_version = '2.8.6'
