--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,7 @@ include ':streamamg-sdk-playkit'
 include ':streamamg-sdk-playkit2go'
 include ':streamamg-sdk-purchases'
 include ':streamamg-sdk-streamplay'
+include ':app'
+include ':streamamg-sdk-demo'
+include ':streamamg-playkit-demo'
 rootProject.name = "streamamg-sdk"
