--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.5.31"
+    ext.kotlin_version = '1.6.20'
     repositories {
         google()
         mavenCentral()
@@ -129,9 +129,9 @@ repositories {
 
 ext {
   //  androidx_crypto_version = '1.1.0-alpha01'
-    appcompat_version = '1.3.0'
+    appcompat_version = '1.4.1'
     constraintlayout_version = '2.0.4'
-    core_ktx_version = '1.6.0'
+    core_ktx_version = '1.7.0'
     gson_version = '2.8.6'
     lifecycle_extensions_version = '2.2.0'
     okhttp_version = '4.9.0'
