SCD-101 Token Custom SSO
SCD-101 Token Custom SSO
- GetKS and Logout with token for custom SSO
- Authentication readme updated
- Added modules namespace

--- a/streamamg-sdk-authentication/build.gradle
+++ b/streamamg-sdk-authentication/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+    namespace = "com.streamamg.streamamg_sdk_authentication"
     compileSdkVersion 33
 
     defaultConfig {
