--- a/streamamg-sdk-cloudmatrix/build.gradle
+++ b/streamamg-sdk-cloudmatrix/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+    namespace = "com.streamamg.streamamg_sdk_cloudmatrix"
     compileSdkVersion 33
 
     defaultConfig {
